Activity Log Added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,11 @@
         <a href="/users" style="text-decoration: none;"><button type="button" class="btn btn-dark btn-lg btn-block font-weight-bold">Users ☃️</button></a>
       </div>
 
+      <div>
+        <a href="/activities" style="text-decoration: none;"><button type="button" class="btn btn-danger btn-lg btn-block font-weight-bold">Activity Log with Redis 📈
+        </button></a>
+      </div>
+
       <footer>
         <div>Made by Triet ✨</div>
       </footer>
