--- a/views/cats.ejs
+++ b/views/cats.ejs
@@ -10,6 +10,8 @@
 </head>
 <body>
     <a href="/"> << Home</a>
+    <br>
+    <a href="/activities"> Activity Log </a>
     <h1><%= title %></h1>
 
     <!--
